applications/tmeit/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: site
  annotations:
spec:
  tls:
  - hosts:
      - tmeit.jlh.name
    secretName: tmeit-jlh-name-tls
  rules:
  - host: tmeit.jlh.name
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: tmeit-app
            port:
              number: 80
